--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,16 @@
+contourpy==1.3.1
+cycler==0.12.1
 flake8==5.0.4
 flake8-annotations==2.9.1
 flake8-quotes==3.3.1
 flake8-variables-names==0.0.5
+fonttools==4.55.3
+kiwisolver==1.4.8
+matplotlib==3.10.0
+numpy==2.2.1
 pep8-naming==0.13.2
+pillow==11.1.0
+pyparsing==3.2.1
 pytest==7.1.3
+python-dateutil==2.9.0.post0
+six==1.17.0
