--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,24 @@ pep8-naming==0.13.2
 pytest==7.1.3
 matplotlib~=3.10.1
 numpy~=2.2.4
+
+py~=1.11.0
+colorama~=0.4.6
+pillow~=11.2.1
+pip~=23.2.1
+attrs~=25.3.0
+wheel~=0.41.2
+setuptools~=68.2.0
+pyflakes~=2.5.0
+pycodestyle~=2.9.1
+pluggy~=1.5.0
+iniconfig~=2.1.0
+six~=1.17.0
+python-dateutil~=2.9.0.post0
+contourpy~=1.3.2
+fonttools~=4.57.0
+packaging~=25.0
+pyparsing~=3.2.3
+cycler~=0.12.1
+kiwisolver~=1.4.8
+scipy
